2002-07-15  Jody Goldberg <jody@gnome.org>

	* lotus.c (read_workbook) : use cell_set_expr_and_value for formulas.
	  Handle the magic exponents that indicate that the previous value was
	  a string.  We need a sample of a previous value == err or na
	* lotus-formula.c (sign_extend) : fix.

2002-06-25  Jon K Hellan  <hellan@acm.org>

	* boot.c (lotus_file_probe): Rewind file after probing.

2002-06-07  Jody Goldberg <jody@gnome.org>

	* lotus.c (record_new) : convert to libgsf.
	(record_next) : ditto.
	(record_destroy) : ditto.
	(read_workbook) : ditto.
	(lotus_read) : ditto.

	* lotus-formula.c (get_cellref) : some constness.
	(make_function) : ditto.
	(lotus_parse_formula) : ditto.

	* boot.c (lotus_file_open) : convert to libgsf.
	(lotus_file_probe) : ditto.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-04-19  Morten Welinder <terra@diku.dk>

	* lotus-formula.c (make_function): Use error constant as
	expression.  (I.e., don't call "ERROR".)

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-02-21  Morten Welinder <terra@diku.dk>

	* lotus-formula.c (make_function): Constify.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* lotus.c (lotus_special_formats): Constify and make static.

	* lotus-formula.c (functions): Constify.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-07  Jody Goldberg <jody@gnome.org>

	* lotus.c (attach_sheet) : Explicitly request a full respan for the
	update after we load.  I had been relying on there being a col/row or
	default col/row sizing to force it.

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-24  Jody Goldberg <jody@gnome.org>
