@@ -43,7 +43,7 @@ const func_struct_t functions[] = {
 	{ 2, 0x15, "bit-or", BINOP, OPER_OR }, FIXME */
 	{ 1, 0x16, "NOT", NORMAL, 0 },
 	{ 1, 0x17, "+", UNARY, GNM_EXPR_OP_UNARY_PLUS },
-	{ 1, 0x1F, "NA", NORMAL, 0 },
+	{ 0, 0x1F, "NA", NORMAL, 0 },
 	{ 1, 0x20, "ERR", NORMAL, 0 },
 	{ 1, 0x21, "abs", NORMAL, 0 },
 	{ 1, 0x22, "floor", NORMAL, 0 },
