@@ -1,5 +1,9 @@
 2002-07-15  Jody Goldberg <jody@gnome.org>
 
+	* lotus-formula.c : NA has no args
+
+2002-07-15  Jody Goldberg <jody@gnome.org>
+
 	* lotus.c (read_workbook) : use cell_set_expr_and_value for formulas.
 	  Handle the magic exponents that indicate that the previous value was
 	  a string.  We need a sample of a previous value == err or na
